<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/scrollViewParent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            tools:text="@string/def"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text1_view_height"
            android:background="@color/MediumAquamarine"
            android:id="@+id/tv_title"
            android:textColor="@color/White"
            android:paddingTop="@dimen/text1_view_padding_top"
            android:paddingLeft="@dimen/text1_view_padding_left"
            android:textSize="@dimen/text_view_text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/image_view_width"
                    android:layout_height="@dimen/image_view_height"
                    android:id="@+id/iv_movie"
                    android:padding="@dimen/text3_view_padding"
                    android:contentDescription="@string/image_view_movie_details_description" />
                <ProgressBar
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_centerInParent="true"
                    android:id="@+id/pbIV"
                    android:visibility="invisible"/>
            </RelativeLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/dk"
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/dk"
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp" />

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/favImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border_64dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/parent3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/overviewLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="@dimen/slideTextSize"
                    android:textColor="@color/Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_to_show_movie_s_overview" />

                <ImageView
                    android:id="@+id/overviewIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp" />
            </LinearLayout>


            <TextView
                android:textSize="@dimen/slideTextSize"
                android:textColor="@color/dk"
                android:id="@+id/tv_overview"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/reviewsLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="@dimen/slideTextSize"
                    android:textColor="@color/Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_to_show_movie_s_reviews" />

                <ImageView
                    android:id="@+id/reviewsIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/parent1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/trailersLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="@dimen/slideTextSize"
                    android:textColor="@color/Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_to_show_movie_s_trailers" />

                <ImageView
                    android:id="@+id/trailerIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_gravity="center"
                android:id="@+id/trailerRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
